# postgres_rust

./: .gitignore  README.md  docker-compose.yml
migrations/: start.sql
nginx/: auth.conf
populater/: index.js  package.json
server/: Cargo.toml  Dockerfile
server/src/: main.rs
server/src/controllers/: mod.rs  transfer.rs  users.rs  wallet.rs
server/src/models/: mod.rs  transfer.rs  user.rs  wallet.rs
server/src/services/: mod.rs  transfer.rs  user.rs  wallet.rs
server/src/utils/: errors.rs  mod.rs  response.rs
stress_test/picpay-node-2-1000/: index.html  req_picpay-test-7c89e.html
stress_test/picpay-node-2-1000/js/: all_sessions.js  assertions.json  global_stats.json  stats.js  stats.json
stress_test/select_hash_string_nome/: index.html  req_picpay-test-7c89e.html
stress_test/select_hash_string_nome/js/: all_sessions.js  assertions.json  global_stats.json  stats.js  stats.json
stress_test/select_nohash_string_nome/: index.html  req_picpay-test-7c89e.html
stress_test/select_nohash_string_nome/js/: all_sessions.js  assertions.json  global_stats.json  stats.js  stats.json
stress_test/tokio-postgres-bb8-2-1000/: index.html  req_picpay-test-7c89e.html
stress_test/tokio-postgres-bb8-2-1000/js/: all_sessions.js  assertions.json  assertions.xml  global_stats.json  stats.js  stats.json
stress_test/tokio-postgres-bb8-2-1500/: index.html  req_picpay-test-7c89e.html
stress_test/tokio-postgres-bb8-2-2500/: index.html  req_picpay-test-7c89e.html
stress_test/tokio-postgres-bb8-4-6000/: index.html  req_picpay-test-7c89e.html
(+15 files in other folders)
