[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
bb8 = "0.8.3"
bb8-postgres = "0.8.1"
postgres-types = { version = "0.2.6", features = ["derive"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = "1.0.117"
sqlx = { version = "0.7.4", features = ["postgres", "runtime-tokio", "macros", "json"] }
sqlxinsert = { version = "0.10.0", default-features = false, features = ["postgres"] }
tokio = { version = "1.37.0", features = ["full"] }
tokio-postgres = { version = "0.7.10", features = ["array-impls", "with-serde_json-1"] }
